# Gradio

./: .buildconfig  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  ISSUE_TEMPLATE.md  LICENSE  Makefile.am  README  README.md  Ungesichertes Dokument 1  autogen.sh  build.rs  configure.ac  cross_win.txt  de.haeckerfelix.GradioDevel.json  de.haeckerfelix.gradio.json  de.haeckerfelix.gradio.json~  git.mk  gradio.doap  make-pot  meson.build  meson_options.txt  meson_post_install.sh  print_git_version.sh  rustfmt.toml  snapcraft.yaml
data/: Makefile.am  app-menu.ui  de.haecker-felix.gradio.gschema.xml  de.haeckerfelix.Gradio.appdata.xml.in  de.haeckerfelix.Gradio.appdata.xml.in.in  de.haeckerfelix.Gradio.desktop.in  de.haeckerfelix.Gradio.desktop.in.in  de.haeckerfelix.Gradio.gschema.xml  de.haeckerfelix.Gradio.service.in  de.haeckerfelix.gradio.appdata.xml.in  de.haeckerfelix.gradio.desktop  de.haeckerfelix.gradio.desktop.in  de.haeckerfelix.gradio.gresource.xml  de.haeckerfelix.gradio.gschema.xml  de.haeckerfelix.gradio.search-provider.ini  de.haeckerfelix.gradio.service.in  de.haeckerfelix.gradio.style.css  gradio.appdata.xml.in  gradio.css  gradio.desktop  gradio.desktop.in  gradio.gresource.xml  meson.build  resources.gresource  resources.xml
data/appdata/: Makefile.am
data/gtk/: collection_listbox.ui  library.ui  menu.ui  notification.ui  player.ui  recorder.ui  search.ui  shortcuts.ui  station_listbox.ui  station_row.ui  style.css  window.ui
data/icons/: Makefile.am  export_logo.sh  meson.build
data/icons/hicolor/: Makefile.am
data/schemas/: de.haecker-felix.gradio.gschema.xml
data/style/: style.css
data/ui/: #categories-row.ui#  #discover-box.ui#  #main-window.ui#  action-popover.ui  action-popover.ui~  app-menu.ui  categories-row.ui  categories-row.ui~  category-tile.ui  collection-row.ui  details-box.ui  details-dialog.ui  discover-action-box.ui  discover-box-overview.ui  discover-box-overview.ui~  discover-box.ui  discover-box.ui~  discover-sidebar.ui  discover-sidebar.ui~  featured-tile-stack.ui  featured-tile.ui  filter-box.ui  grid-item.ui  grid-item.ui~  groupbox.ui  headerbar.ui  item-group.ui  library-action-box.ui  library-box.ui  library-box.ui~  list-item.ui  list-item.ui~  main-window.ui  main-window.ui~  manual-box.ui  manual-box.ui~  menubutton.ui  mini-player.ui  organize-collection-dialog.ui  organize-collection-popover.ui  (+25 more)
data/ui/item/: big-tile-item.ui  button-item.ui  row-item.ui  small-tile-item.ui  switch-item.ui
data/ui/page/: add-page.ui  collection-items-page.ui  collections-page.ui  discover-page.ui  library-page.ui  search-page.ui  settings-page.ui  station-address-page.ui  station-detail-page.ui  station-model-page.ui  station-page.ui
data/ui/style/: gradio.css
data/ui/view/: big-tile-view.ui  row-view.ui  small-tile-view.ui
debian/: control  (+2 more)
rustio/: Cargo.toml  README.md
rustio/src/: audioplayer.rs  client.rs  country.rs  error.rs  language.rs  lib.rs  state.rs  station.rs  stats.rs  tag.rs
src/: .goutputstream-YZNE8Y  AudioPlayer.vala  Config.vala  Config.vala.cmake  DataProvider.vala  Gradio.vala  Library.vala  MPRIS.vala  Makefile.am  RadioStation.vala  RadioStationsProvider.vala  SearchProvider.vala  StationDataProvider.vala  Util.vala  app.rs  app_cache.rs  app_state.rs  audioplayer.rs  config.vapi  favicon_downloader.rs  gradio-additional-data-provider.vala  gradio-app.vala  gradio-audio-player.vala  gradio-category-item-provider.vala  gradio-category-items.vala  gradio-codec-installer.vala  gradio-collection-model.vala  gradio-collection.vala  gradio-details-box.vala  gradio-details-dialog.vala  gradio-featured-tile-stack.vala  gradio-featured-tile.vala  gradio-filterbox.vala  gradio-headerbar.vala  gradio-image-cache.vala  gradio-image-provider.vala  gradio-item-group.vala  gradio-library.vala  gradio-main-window.vala  gradio-mainbox.vala  (+48 more)
src/Data/: CategoryItemProvider.vala  Codec.vala  ImageProvider.vala  RadioBrowser.vala  SettingsManager.vala  StationProvider.vala
src/Widgets/: ActionPopover.vala  DiscoverBox.vala  GridItem.vala  LibraryBox.vala  ListItem.vala  MainWindow.vala  ManualBox.vala  MiniPlayer.vala  PlayerToolbar.vala  ReleaseNotes.vala  ReleaseNotesWindow.c  SettingsDialog.vala  SettingsWindow.vala  StationEditorDialog.vala  StationsGridView.vala  StationsListView.vala
src/core/: audio-player.vala  gradio-app.c  gradio.vala  library.vala  mpris.vala  radio-station.vala  station-registry.c  station-registry.vala
src/data/: codec-installer.vala  settings.vala
src/groupbox/: gradio-groupbox-button.vala  gradio-groupbox-item.vala  gradio-groupbox-switch-item.vala  gradio-groupbox-widget-item.vala  gradio-groupbox.vala
src/item/: gradio-big-tile-item.vala  gradio-item.vala  gradio-row-item.vala  gradio-small-tile-item.vala
src/model/: gradio-collection-model.vala  gradio-generic-model.vala  gradio-station-model.vala
src/page/: gradio-add-page.vala  gradio-collection-items-page.vala  gradio-collections-page.vala  gradio-discover-page.vala  gradio-library-page.vala  gradio-page.vala  gradio-search-page.vala  gradio-settings-page.vala  gradio-station-address-page.vala  gradio-station-detail-page.vala  gradio-station-model-page.vala  gradio-station-page.vala  library_page.rs  library_page.ui  mod.rs  page.rs  search_page.rs  search_page.ui  test_page.rs  test_page.ui
src/row/: gradio-big-row.vala  gradio-row.vala  gradio-small-row.vala
src/tile/: gradio-big-tile.vala  gradio-small-tile.vala  gradio-tile.vala
src/ui/: library-box.vala  main-window.vala  mini-player.vala  player-toolbar.vala  release-notes-window.vala  settings-dialog.vala  settings-window.c  settings-window.vala  status-label.vala
src/vapis/: cairo.vapi  config.vapi  dazzle-1.0.vapi  gd-1.0.vapi
src/view/: gradio-big-tile-view.vala  gradio-row-view.vala  gradio-small-tile-view.vala  gradio-tile-view.vala  gradio-view.vala
src/widgets/: collection_listbox.rs  mod.rs  notification.rs  playbutton.rs  playbutton.ui  playerbar.rs  playerbar.ui  station_listbox.rs  station_listbox.ui  station_row.rs  station_row.ui
(+86 files in other folders)
