[package]
name = "gradio"
version = "0.8.0"
authors = ["Felix Häcker <haecker.felix1207@gmail.com>"]

[dependencies]
log = "0.4"
pretty_env_logger = "0.2"
gio = "0.4.0"
rusqlite = "0.13.0"
glib = "0.5.0"

[dependencies.gtk]
version = "0.4.0"
features = ["v3_10"]

[dependencies.rustio]
path = "./rustio"
