[package]
name = "gradio"
version = "0.1.0"
authors = ["Felix Häcker <haecker.felix1207@gmail.com>"]
build = "build.rs"

[dependencies]
gio = "0.5"
glib = "0.6"
gdk = "0.9.0"
log = "0.4"
simplelog = "0.5"
rustio = { git="https://github.com/haecker-felix/Rustio.git" }
libhandy = { git = "https://gitlab.gnome.org/jsparber/libhandy-rs" }
gstreamer = "0.12"
mpris-player = "0.1"
rusqlite = "0.13"
indexmap = "1.0"
quick-error = "1.2.2"
restson = "0.4"

[dependencies.gtk]
version = "0.5"
features = ["v3_22"]