[package]
name = "rustio"
version = "0.1.0"
authors = ["Felix Häcker <haecker.felix1207@gmail.com>"]

[dependencies]
gstreamer = "0.11.1"
reqwest = "0.8.5"
serde = "1.0.43"
serde_json = "1.0"
serde_derive = "1.0.43"
log = "0.4"
failure = "0.1.1"
rand = "0.5.0"

[dependencies.gtk]
version = "0.4.0"
features = ["v3_22"]