vala_sources = [
		'gradio-app.vala',
		'page/gradio-library-page.vala',
		'page/gradio-search-page.vala',
		'page/gradio-page.vala',
		'page/gradio-add-page.vala',
		'page/gradio-station-address-page.vala',
		'page/gradio-collection-items-page.vala',
		'page/gradio-collections-page.vala',
		'groupbox/gradio-groupbox-switch-item.vala',
		'groupbox/gradio-groupbox-item.vala',
		'groupbox/gradio-groupbox.vala',
		'groupbox/gradio-groupbox-widget-item.vala',
		'groupbox/gradio-groupbox-button.vala',
		'model/gradio-station-model.vala',
		'model/gradio-collection-model.vala',
		'model/gradio-generic-model.vala',
		'gradio-settings-window.vala',
		'gradio-details-box.vala',
		'gradio-station-editor-dialog.vala',
		'gradio-radio-station.vala',
		'gradio-collection.vala',
		'gradio-category-items.vala',
		'gradio-mainbox.vala',
		'gradio-audio-player.vala',
		'gradio-codec-installer.vala',
		'gradio-library.vala',
		'gradio-main-window.vala',
		'gradio-mpris.vala',
		'gradio-player-toolbar.vala',
		'gradio-radio-browser.vala',
		'gradio-search-provider.vala',
		'gradio-settings.vala',
		'gradio-status-icon.vala',
		'gradio-utils.vala',
		'gradio-notification.vala',
		'gradio-headerbar.vala',
		'gradio-selection-toolbar.vala',
		'gradio-image-cache.vala',
		'gradio-organize-collection-dialog.vala',
		'gradio-filterbox.vala',
		'gradio-station-compare.vala',
		'gradio-thumbnail.vala']

vala_args = [
	'--target-glib=2.38',
	'--pkg=config',
	'--pkg=gd-1.0',
	'--pkg=posix',
	'--vapidir=' + meson.current_source_dir() + '/vapis']

executable('gradio',
		vala_sources,
		resources,
 		c_args : [ '-DVERSION="' + meson.project_version() + '"', '-DGETTEXT_PACKAGE="gradio"', '-DGNOMELOCALEDIR="' + get_option('prefix') + '/' + get_option('localedir') + '"' ],
		vala_args: vala_args,
		install : true,
		dependencies : [glib, gobject, gio, gtk, gd, libsoup, json_glib, gstreamer, gstreamer_pbutils, sqlite3])
