icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
icon64dir=$(datadir)/icons/hicolor/64x64/apps
icon128dir=$(datadir)/icons/hicolor/128x128/apps
icon192dir=$(datadir)/icons/hicolor/192x192/apps
iconscalabledir=$(datadir)/icons/hicolor/scalable/apps

icon16_DATA = 16x16/de.haeckerfelix.gradio.png
icon32_DATA = 32x32/de.haeckerfelix.gradio.png
icon48_DATA = 48x48/de.haeckerfelix.gradio.png
icon64_DATA = 64x64/de.haeckerfelix.gradio.png
icon128_DATA = 128x128/de.haeckerfelix.gradio.png
icon192_DATA = 192x192/de.haeckerfelix.gradio.png
iconscalable_DATA = scalable/de.haeckerfelix.gradio-symbolic.svg

EXTRA_DIST = $(icon16_DATA) $(icon32_DATA) $(icon48_DATA) $(icon64_DATA) $(icon128_DATA) $(icon192_DATA) $(iconscalable_DATA)

-include $(top_srcdir)/git.mk
